# wmw

./: Cargo.toml  README.md  input.css  tailwind.config.js  test.js
.github/workflows/: deploy.yml
assets/images/: button_deco.avif  heart_line.avif  kobieta_i_swieca_2_2.avif  kobieta_i_swieca_2_3.avif  kobiety_przy_swiecy.avif  liscie_o.avif  liscie_o2.avif  luiza_bnner.avif  luiza_bnner2.avif  luiza_bnner3.avif  luiza_bnner4.avif  luiza_bnner5.avif  luiza_bnner6.avif  luiza_bnner7.avif  luiza_bnner8.avif  luiza_w_marynarce2.avif  luiza_w_marynarce3.avif  monitorek.avif  monitorki.avif  pokoj.avif  taniec_kobieta.avif
assets/video/: Silent_Conversation_Animation_Created.webm  dancing_woman.webm
end2end/tests/: mautic_test.rs
src/: api.rs  app.rs  lib.rs  main.rs  models.rs  state.rs  webhook.rs
src/components/: animatein.rs  footer.rs  home_sections.rs  layout.rs  lemon.rs  mod.rs  navbar.rs  paymant.rs  utils.rs
src/pages/: about.rs  home.rs  mod.rs  optin.rs  payment.rs  privacy_policy.rs
style/: main.scss
