[package]
name = "wmw"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# --- AXUM STACK (Replaces Actix) ---
axum = { version = "0.7", optional = true, features = ["macros"] }
leptos_axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "trace"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
openid = { version = "0.23.0", optional = true }
oauth2 = { version = "5.0.0", optional = true }
tower-sessions = { version = "0.15.0", optional = true }
tower-sessions-sqlx-store = { version = "0.15.0", optional = true }
axum-login = { version = "0.18.0", optional = true }
rand = { version = "0.10.0", optional = true }
lettre = { version = "0.11.20", optional = true }
# -----------------------------------

console_error_panic_hook = "0.1"
http = { version = "1", optional = true }

# NOTE: Corrected versions to 0.7 (Current Stable)
leptos = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos-use = "0.15"                 # Check compatibility with 0.7

wasm-bindgen = "=0.2.108"
serde = "1.0"
chrono = "0.4"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
] }

# --- HTTP CLIENT (Replaces awc) ---
# Used for server-side requests (e.g. to Mautic/Paddle)
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
], optional = true }
# ----------------------------------

dotenvy = { version = "0.15", optional = true }
base64 = { version = "0.22", optional = true }
serde_json = "1.0"
rustls = { version = "0.23", optional = true, features = ["aws_lc_rs"] }
uuid = { version = "1.23", features = ["v4"], optional = true }
paddle-rust-sdk = "0.17.0"                                               # Ensure this version is compatible
leptos_ui = "0.3.21"
tw_merge = "0.1.20"
sqlx = "0.8.6"

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",                      # CHANGED
  "dep:leptos_axum",               # CHANGED
  "dep:tower",                     # NEW
  "dep:tower-http",                # NEW
  "dep:tokio",                     # NEW
  "dep:reqwest",                   # REPLACES awc
  "dep:dotenvy",
  "dep:base64",
  "dep:uuid",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:rustls",
  "dep:openid",
  "dep:oauth2",
  "dep:tower-sessions",
  "dep:tower-sessions-sqlx-store",
  "dep:axum-login",
  "dep:lettre",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
mockito = "1.7.2"
tokio = { version = "1", features = ["full"] }

[[test]]
name = "mautic_test"
path = "end2end/tests/mautic_test.rs"

[package.metadata.leptos]
tailwind-input-file = "input.css"
tailwind-config-file = "tailwind.config.js"
output-name = "wmw"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "assets"
site-addr = "192.168.1.247:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
